# NovaShell

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: env.rs  keycode.rs  main.rs  parser.rs
src/shell/: mod.rs  printer.rs  thread_manager.rs
src/shell/command/: help.rs  mod.rs
