[package]
name = "NovaShell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "NovaShell"
path = "src/main.rs"

[dependencies]
dragonos-dsc = { git = "https://git.mirrors.dragonos.org/DragonOS-Community/dragonos-dsc.git", rev = "7c654bcccc" }
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'