[package]
name = "NovaShell"
version = "0.1.0"
edition = "2021"
description = "Shell of DragonOS"
authors = [ "MemoryShore <1353318529@qq.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dragonos-dsc = { git = "https://git.mirrors.dragonos.org/DragonOS-Community/dragonos-dsc.git", rev = "7c654bcccc" }
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2"
num-traits = "0.2"
num-derive = "0.4"
num_enum = "0.5.1"
num_enum_derive = "0.7.1"
path-clean = "1.0.1"
